--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis illo veniam accusamus laborum quae non laudantium commodi voluptas voluptatum sint, explicabo mollitia dicta delectus sed optio! Quidem error voluptate accusantium?</p>
 </body>
 </html>
